--- a/templates/myapp/index.html
+++ b/templates/myapp/index.html
@@ -13,7 +13,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="{% static 'C:\Users\bisha\Desktop\cis400\static\style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">     
     </head>
     <body>
         <!--[if lt IE 7]>
