--- a/templates/myapp/cta.html
+++ b/templates/myapp/cta.html
@@ -8,16 +8,22 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
+       
     </head>
     <body>
+        <h1>Company Trends</h1>
+        <a href="{{stockUrl}}">{{ticker}} Live Stock Graph</a> 
         
         <h1>Positive: {{pos}}</h1>
         <h1>Negative: {{neg}}</h1>
+        <div>
+            {{ graph| safe}}
+        </div>
         
         <script>
             setTimeout(function() {
                 location.reload();
-            }, 10)
+            }, 30000)
         </script>
 
         <script src="" async defer></script>
