Added Stock Table

--- a/templates/myapp/cta.html
+++ b/templates/myapp/cta.html
@@ -66,5 +66,8 @@
             });
           </script>
         {% endif %}
+
+        <div>
+            {{stockTable | safe }}
     </body>
 </html>
