--- a/templates/myapp/cta.html
+++ b/templates/myapp/cta.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 
 <!-- Include jQuery -->
@@ -18,24 +19,18 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" type="text/css" href="{% static 'ctaStyle.css' %}"> 
     </head>
     <body>
-        <h1>Company Trends</h1>
+        <h1>{{ticker}} Company Trends</h1>
         <!-- Display messages (e.g., for invalid ticker symbol) -->
-        {% if messages %}
-          <ul class="messages">
-            {% for message in messages %}
-              <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
+        
 
         <div id="stock-chart" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
         <div hx-get="/cta" hx-trigger="every 10s">
-            <h1>Positive: {{pos}}</h1>
-            <h1>Negative: {{neg}}</h1>
-            <div>
+            <h1>Positive Tweets About {{ticker}} : {{pos}}</h1>
+            <h1>Negative Tweets About {{ticker}} : {{neg}}</h1>
+            <div id="pie-chart-container">
                 {{ graph| safe}}
             </div>
         </div>
@@ -69,5 +64,6 @@
 
         <div>
             {{stockTable | safe }}
+        </div>
     </body>
 </html>
